Add Firebase config for web app

--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
     // Firebase config (replace with your project values)
     // ------------------------------
     const firebaseConfig = {
-      apiKey: "PASTE_API_KEY",
-      authDomain: "PASTE_AUTH_DOMAIN",
-      projectId: "PASTE_PROJECT_ID",
-      storageBucket: "PASTE_STORAGE_BUCKET",
-      messagingSenderId: "PASTE_SENDER_ID",
-      appId: "PASTE_APP_ID"
+      apiKey: "AIzaSyBU-bWMdsusXQ3Uc_vxOvRlpp2FsNrtszc",
+      authDomain: "productbuilder-week1-fccc8.firebaseapp.com",
+      projectId: "productbuilder-week1-fccc8",
+      storageBucket: "productbuilder-week1-fccc8.firebasestorage.app",
+      messagingSenderId: "652260101175",
+      appId: "1:652260101175:web:d905f7b2ff34e0a96043b2"
     };
 
     const app = initializeApp(firebaseConfig);
