Set admin UID in rules and dashboard

--- a/admin.html
+++ b/admin.html
@@ -109,7 +109,7 @@
     const db = getFirestore(app);
     const auth = getAuth(app);
 
-    const ADMIN_UID = "PASTE_ADMIN_UID_HERE";
+    const ADMIN_UID = "OGyKbcDv2ffMBjRZ6h3b7BypZs73";
 
     const $ = (s) => document.querySelector(s);
     const loginBtn = $("#loginBtn");
