--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@
       nameInput.value = "";
       resultsEl.innerHTML = "";
       communityList.innerHTML = "";
+      suggestKey.value = "";
+      suggestHangul.value = "";
       nameInput.focus();
     });
 
@@ -763,7 +765,7 @@
       await renderResults(raw, wordResults, combinedOptions, combinedSource);
 
       suggestKey.value = normalizeEnglishKey(raw);
-      if (!suggestHangul.value) suggestHangul.value = combinedOptions[0] || "";
+      suggestHangul.value = combinedOptions[0] || "";
 
       const firstKey = wordResults[0]?.key || "";
       if (firstKey) {
