Use Korean flag PNG for brand icon}

--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,7 @@
   <div class="wrap">
     <header class="reveal">
       <div class="brand">
-        <div class="mark" aria-hidden="true"></div>
+        <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
           <h1>Name → Hangul</h1>
           <p>Admin dashboard · moderation & canonical control</p>
