--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="wrap">
     <header class="reveal">
       <div class="brand">
-        <div class="mark" aria-hidden="true"></div>
+        <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
           <h1>Name → Hangul</h1>
           <p>English name → natural Hangul spelling</p>
