--- a/terms.html
+++ b/terms.html
@@ -13,7 +13,7 @@
   <main class="wrap">
     <header class="reveal">
       <div class="brand">
-        <div class="mark" aria-hidden="true"></div>
+        <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
           <h1>Name → Hangul</h1>
           <p>English name → natural Hangul spelling · browser-only</p>
