Rename site to Hangul Name Studio

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="google-adsense-account" content="ca-pub-7713287823701747">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="About Name → Hangul, a simple English name to Hangul converter." />
-  <title>About | Name → Hangul</title>
+  <meta name="description" content="About Hangul Name Studio, a simple English name to Hangul converter." />
+  <title>About | Hangul Name Studio</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +15,7 @@
       <div class="brand">
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
-          <h1>Name → Hangul</h1>
+          <h1>Hangul Name Studio</h1>
           <p>English name → natural Hangul spelling · browser-only</p>
         </div>
       </div>
@@ -32,7 +32,7 @@
 
     <section class="hero reveal delay-2">
       <h2 class="page-title">About</h2>
-      <p class="page-sub">Name → Hangul is a simple, privacy-friendly tool that converts English names into natural Hangul spellings. It runs entirely in the browser and stores custom spellings locally.</p>
+      <p class="page-sub">Hangul Name Studio is a simple, privacy-friendly tool that converts English names into natural Hangul spellings. It runs entirely in the browser and stores custom spellings locally.</p>
     </section>
 
     <section class="section reveal delay-3">
@@ -46,7 +46,7 @@
     </section>
 
     <footer class="reveal delay-5">
-      © <span id="year"></span> Name → Hangul · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
+      © <span id="year"></span> Hangul Name Studio · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
     </footer>
   </main>
   <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
