--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="google-adsense-account" content="ca-pub-7713287823701747">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin | Name → Hangul</title>
-  <meta name="description" content="Admin moderation dashboard for Name → Hangul."/>
+  <title>Admin | Hangul Name Studio</title>
+  <meta name="description" content="Admin moderation dashboard for Hangul Name Studio."/>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +15,7 @@
       <div class="brand">
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
-          <h1>Name → Hangul</h1>
+          <h1>Hangul Name Studio</h1>
           <p>Admin dashboard · moderation & canonical control</p>
         </div>
       </div>
@@ -84,7 +84,7 @@
     </section>
 
     <footer class="reveal delay-5">
-      © <span id="year"></span> Name → Hangul · Admin
+      © <span id="year"></span> Hangul Name Studio · Admin
     </footer>
   </div>
 
