--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="google-adsense-account" content="ca-pub-7713287823701747">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Contact Name → Hangul." />
-  <title>Contact | Name → Hangul</title>
+  <meta name="description" content="Contact Hangul Name Studio." />
+  <title>Contact | Hangul Name Studio</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +15,7 @@
       <div class="brand">
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
-          <h1>Name → Hangul</h1>
+          <h1>Hangul Name Studio</h1>
           <p>English name → natural Hangul spelling · browser-only</p>
         </div>
       </div>
@@ -46,7 +46,7 @@
     </section>
 
     <footer class="reveal delay-5">
-      © <span id="year"></span> Name → Hangul · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
+      © <span id="year"></span> Hangul Name Studio · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
     </footer>
   </main>
   <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
