--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="google-adsense-account" content="ca-pub-7713287823701747">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Name → Hangul</title>
+  <title>Hangul Name Studio</title>
   <meta name="description" content="Write your English name in Hangul. Dictionary-first accuracy + smart fallback. Browser-only."/>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
@@ -16,7 +16,7 @@
       <div class="brand">
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
-          <h1>Name → Hangul</h1>
+          <h1>Hangul Name Studio</h1>
           <p>English name → natural Hangul spelling</p>
         </div>
       </div>
@@ -126,7 +126,7 @@
     </section>
 
     <footer class="reveal delay-5">
-      © <span id="year"></span> Name → Hangul · Privacy-friendly (localStorage only) ·
+      © <span id="year"></span> Hangul Name Studio · Privacy-friendly (localStorage only) ·
       Contact: <b>goodhywon@gmail.com</b> ·
       <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a> · <a href="contact.html">Contact</a>
     </footer>
