--- a/privacy.html
+++ b/privacy.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="google-adsense-account" content="ca-pub-7713287823701747">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Privacy policy for Name → Hangul." />
-  <title>Privacy Policy | Name → Hangul</title>
+  <meta name="description" content="Privacy policy for Hangul Name Studio." />
+  <title>Privacy Policy | Hangul Name Studio</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +15,7 @@
       <div class="brand">
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
-          <h1>Name → Hangul</h1>
+          <h1>Hangul Name Studio</h1>
           <p>English name → natural Hangul spelling · browser-only</p>
         </div>
       </div>
@@ -37,7 +37,7 @@
 
     <section class="section reveal delay-3">
       <h3>Summary</h3>
-      <p>Name → Hangul runs entirely in your browser. We do not collect or store the names you enter. Custom spellings are stored only in your browser using localStorage.</p>
+      <p>Hangul Name Studio runs entirely in your browser. We do not collect or store the names you enter. Custom spellings are stored only in your browser using localStorage.</p>
 
       <h3>Information we do not collect</h3>
       <ul>
@@ -57,7 +57,7 @@
     </section>
 
     <footer class="reveal delay-5">
-      © <span id="year"></span> Name → Hangul · <a href="terms.html">Terms</a> · <a href="contact.html">Contact</a>
+      © <span id="year"></span> Hangul Name Studio · <a href="terms.html">Terms</a> · <a href="contact.html">Contact</a>
     </footer>
   </main>
   <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
