Remove reset button from header

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
           <p>English name → natural Hangul spelling</p>
         </div>
       </div>
-      <div class="top-actions">
-        <div class="pill" id="clearBtn" title="Clear">
-          <span aria-hidden="true">⌫</span><span>Reset</span>
-        </div>
-      </div>
+      <div class="top-actions"></div>
     </header>
 
     <nav class="nav reveal delay-1" aria-label="Page">
