Align content with current structure and AdSense guidelines

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
           <h1>Hangul Name Studio</h1>
-          <p>English name → natural Hangul spelling · browser-only</p>
+          <p>English name → natural Hangul spelling</p>
         </div>
       </div>
     </header>
@@ -32,17 +32,22 @@
 
     <section class="hero reveal delay-2">
       <h2 class="page-title">About</h2>
-      <p class="page-sub">Hangul Name Studio is a simple, privacy-friendly tool that converts English names into natural Hangul spellings. It runs entirely in the browser and stores custom spellings locally.</p>
+      <p class="page-sub">Hangul Name Studio is a focused tool that converts English names into natural Hangul spellings. Community suggestions are reviewed before becoming official, keeping results accurate and consistent.</p>
     </section>
 
     <section class="section reveal delay-3">
       <h3>Project goals</h3>
-      <p>Provide a clean, focused conversion experience with clear explanations, example outputs, and an optional custom dictionary for personal preferences.</p>
+      <p>Provide a clean, focused conversion experience with transparent review, simple navigation, and high-quality results that respect Korean reading patterns.</p>
     </section>
 
     <section class="section reveal delay-4">
       <h3>Who it is for</h3>
       <p>English speakers who want readable Hangul for travel, profiles, creative projects, or name tags. It is not an official romanization system.</p>
+    </section>
+
+    <section class="section reveal delay-5">
+      <h3>Quality & transparency</h3>
+      <p>We maintain clear navigation and original content focused on the name conversion experience. Ads, if shown, are secondary to the main content.</p>
     </section>
 
     <footer class="reveal delay-5">
