--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
           <h1>Hangul Name Studio</h1>
-          <p>English name → natural Hangul spelling · browser-only</p>
+          <p>English name → natural Hangul spelling</p>
         </div>
       </div>
     </header>
