--- a/terms.html
+++ b/terms.html
@@ -16,7 +16,7 @@
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
           <h1>Hangul Name Studio</h1>
-          <p>English name → natural Hangul spelling · browser-only</p>
+          <p>English name → natural Hangul spelling</p>
         </div>
       </div>
     </header>
@@ -41,6 +41,9 @@
 
       <h3>Accuracy</h3>
       <p>Spellings are not guaranteed to be official or universally accepted. Users are responsible for choosing the spelling they prefer.</p>
+
+      <h3>Content standards</h3>
+      <p>We focus on original, non-duplicative content and clear navigation so users can find the promised service quickly. Advertising, when shown, is kept secondary to the main content.</p>
 
       <h3>Acceptable use</h3>
       <ul>
