--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
           <h1>Hangul Name Studio</h1>
-          <p>English name → natural Hangul spelling · browser-only</p>
+          <p>English name → natural Hangul spelling</p>
         </div>
       </div>
     </header>
@@ -37,17 +37,17 @@
 
     <section class="section reveal delay-3">
       <h3>Summary</h3>
-      <p>Hangul Name Studio runs entirely in your browser. We do not collect or store the names you enter. Custom spellings are stored only in your browser using localStorage.</p>
+      <p>Hangul Name Studio uses Firebase services to store community suggestions and moderation data. We do not collect personal profile information beyond what is required for authentication.</p>
 
-      <h3>Information we do not collect</h3>
+      <h3>Data we store</h3>
       <ul>
-        <li>Your input names</li>
-        <li>Personal identifiers</li>
-        <li>Account data (no accounts are required)</li>
+        <li>Suggestions you submit (name key, Hangul suggestion, timestamps)</li>
+        <li>Votes and reports associated with your anonymous account</li>
+        <li>Admin moderation actions for audit purposes</li>
       </ul>
 
-      <h3>Local storage</h3>
-      <p>If you save a custom spelling, it is stored in your browser so the site can remember your preference. You can delete this anytime using the “Reset custom” button on the homepage.</p>
+      <h3>Authentication</h3>
+      <p>Visitors are authenticated anonymously to prevent abuse. The admin signs in with Google to approve or reject suggestions.</p>
 
       <h3>Advertising</h3>
       <p>This site may display ads provided by Google. Google may use cookies or similar technologies to serve and measure ads. For more details, review Google’s advertising policies.</p>
