--- a/resources.html
+++ b/resources.html
@@ -16,7 +16,7 @@
         <div class="mark" aria-hidden="true"><img src="assets/taegeuk.png" alt="" /></div>
         <div>
           <h1>Hangul Name Studio</h1>
-          <p>English name → natural Hangul spelling · browser-only</p>
+          <p>English name → natural Hangul spelling</p>
         </div>
       </div>
     </header>
@@ -53,7 +53,7 @@
 
     <section class="section reveal delay-4">
       <h3>Corrections</h3>
-      <p>If you prefer a different spelling, save it in the custom dictionary on the homepage so it becomes your default.</p>
+      <p>If you prefer a different spelling, submit a community suggestion on the homepage so it can be reviewed.</p>
     </section>
 
     <footer class="reveal delay-5">
